--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.6.2",
-    "sequelize-cli": "^6.2.0"
+    "sequelize-cli": "^6.2.0",
+    "validator": "^13.6.0"
   }
 }
